Fixed spacing and nesting of headers in the Table of Contents on the blog and docs pages

--- a/assets/styles/docs.scss
+++ b/assets/styles/docs.scss
@@ -73,7 +73,7 @@ $bd-gutter-x: 3rem;
 
     h3 {
         padding-top: 1.25rem;
-        font-size: calc($font-size-base * 1.625);
+        font-size: calc($font-size-base * 1.5);
         color: $white;
         font-weight: 300;
     }
@@ -254,7 +254,7 @@ $bd-gutter-x: 3rem;
     }
     h2, h2 a {
         color: $white;
-        font-size: 1.75rem;
+        font-size: 1.875rem;
         line-height: 2.735rem;
         font-weight: 300;
     }
